# agent-with-langgraph

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: release.yml
src/prompts/: main.py
src/skills/: all_skills.py
src/skills/langgraph-docs/: SKILL.md
src/tool/: agenda.py  tavily.py
